--- a/starter-code/views/authentication/signup.ejs
+++ b/starter-code/views/authentication/signup.ejs
@@ -15,6 +15,11 @@
           <label for="password">Password</label>
           <input type="password" name="password" class="form-control">
         </div>
+        <div class="form-group">
+          <label for="pic_name">Img. name</label>
+          <input type="text" name="pic_name">
+          <input type="file" name="pic_path">
+        </div>
         <button type="submit">Signup</button>
       </form>
     </div>
