--- a/starter-code/views/layouts/main-layout.ejs
+++ b/starter-code/views/layouts/main-layout.ejs
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>IronTumblr</title>
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <!-- <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script> -->
   </head>
   <body>
     <div class="main-container">
       <%- body -%>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="/javascripts/reward-donate.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
   </body>
 </html>
